2016-01-13  Edward Jones  <ed.jones@embecosm.com>

	* include/mageec/Database.h (Database::addFeaturesAfterPass):
	Removed method, continuous feature extraction interface removed.
	* lib/Database.cpp (create_compilation_feature_table):
	Removed SQL query.

2016-01-13  Edward Jones  <ed.jones@embecosm.com>

	* include/mageec/ML.h: Remove iterative training interfaces.
	* include/mageec/ML/C5.h: Likewise.
	* include/mageec/ML/FileML.h: Likewise.
	* lib/ML/C5.cpp: Likewise.
	* lib/ML/FileML.cpp: Likewise.

2016-01-13  Edward Jones  <ed.jones@embecosm.com>

	* include/mageec/Types.h (TypeID ID): Define integer types that
	mageec enumerations and IDs are based on.
	* lib/Database.cpp: Use mageec::ID where appropriate to improve
	type safety.

2016-01-13  Edward Jones  <ed.jones@embecosm.com>

	* include/mageec/Attribute.h: Added file.
	* include/mageec/AttributeSet.h: Likewise.
	* include/mageec/Feature.h: Removed file.
	* include/mageec/FeatureSet.h: Likewise.
	* include/mageec/Parameter.h: Likewise.
	* include/mageec/ParameterSet.h: Likewise.
	* include/mageec/Database.h: Use Attribute.h and AttributeSet.h for
	Feature and Parameter definitions.
	* include/mageec/ML.h: Likewise.
	* include/mageec/ML/C5.h: Likewise.
	* include/mageec/ML/FileML.h: Likewise.
	* include/mageec/Result.h: Likewise.
	* include/mageec/TrainedML.h: Likewise.
	* lib/Database.cpp: Likewise.
	* lib/ML/C5.cpp: Likewise.
	* lib/ML/FileML.cpp: Likewise.
	* lib/TrainedML.cpp: Likewise.

2016-01-12  Edward Jones  <ed.jones@embecosm.com>

	* include/mageec/FeatureSet.h (FeatureSet::size): Added method.
	* include/mageec/Result.h (Result::getPassName): Removed method.
	(Result::getPassSequence): Added method.
	* lib/Database.cpp (Database::trainMachineLearner): Extract
	the pass sequence from the database as well as the parameters and
	features.
	(ResultIterator::operator*): Correct select_features query to
	extract the correct identifiers.
	* lib/ML/C5.cpp (ResultComparator): Removed comparator object.