@@ -1,8 +1,8 @@
-add_custom_target (all-doc)
-add_custom_target (all-info)
-add_custom_target (all-html)
-add_custom_target (all-pdf)
-add_dependencies (all-doc all-info all-html all-pdf)
+add_custom_target (doc)
+add_custom_target (info)
+add_custom_target (html)
+add_custom_target (pdf)
+add_dependencies (doc info html pdf)
 
 
 # Find doxygen and makeinfo
@@ -13,7 +13,7 @@ find_program(MAKEINFO_EXECUTABLE NAMES makeinfo)
 # check required programs are available.
 if ((MAGEEC_WITH_USER_DOCS OR MAGEEC_WITH_DESIGN_DOCS) AND
     NOT MAKEINFO_EXECUTABLE)
-  message(SEND_ERROR "makeinfo missing, cannot generate user/design documentation")
+  message(SEND_ERROR "makeinfo missing, cannot generate user or design documentation")
 endif ()
 
 if (MAGEEC_WITH_DOXYGEN AND NOT DOXYGEN_FOUND)
@@ -39,8 +39,8 @@ if (MAKEINFO_EXECUTABLE)
       WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/html
       COMMENT "Generating MAGEEC user guide html." VERBATIM)
 
-    add_dependencies (all-info user-guide-info)
-    add_dependencies (all-html user-guide-html)
+    add_dependencies (info user-guide-info)
+    add_dependencies (html user-guide-html)
   endif ()
 
   if (MAGEEC_WITH_DESIGN_DOCS)
@@ -54,8 +54,8 @@ if (MAKEINFO_EXECUTABLE)
       WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/html
       COMMENT "Generated MAGEEC design document html." VERBATIM)
 
-    add_dependencies (all-info design-info)
-    add_dependencies (all-html design-html)
+    add_dependencies (info design-info)
+    add_dependencies (html design-html)
   endif()
 endif()
 
@@ -71,11 +71,11 @@ if (DOXYGEN_FOUND AND MAGEEC_WITH_DOXYGEN)
     WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/doxygen
     COMMENT "Generating MAGEEC API documentation using doxygen." VERBATIM)
 
-  add_dependencies (all-doc mageec-doxygen)
+  add_dependencies (doc mageec-doxygen)
 endif ()
 
 
 # Install documentation by copying the various directories to the install
-install (DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/info DESTINATION doc)
-install (DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/html DESTINATION doc)
+install (DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/info    DESTINATION doc)
+install (DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/html    DESTINATION doc)
 install (DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/doxygen DESTINATION doc)
